--- a/ZapChat/src/styles.scss
+++ b/ZapChat/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-image: url('src/assets/images/chat-background.png');
+  background-repeat: no-repeat;
+}
