--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -14,7 +14,7 @@
             <p><a id="forgot" href="">Forgot Password?</a></p><div class="login">
              <button type="button" id='loginbtn' (click)="validate()">Log in</button>
   </div>
- <p>New user?<a href="#" style="color:dodgerblue">Sign Up</a></p>
+ <p>New user?<a routerLink="/signUp">Sign Up</a></p>
   </div>
   </form>
 </div>
