--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -12,7 +12,7 @@
               <span class="toolTipText">Please enter Your Password</span>
             </div>
             <p><a id="forgot" href="">Forgot Password?</a></p><div class="login">
-             <button type="button" class='loginButton' id='loginbtn' (click)="onClickLogin">Log in</button>
+             <button type="button" class='loginButton' id='loginbtn' (click)="onClickLogin()">Log in</button>
   </div>
  <p>New user?<a routerLink="/signUp">Sign Up</a></p>
   </div>
