contact list component created

--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -15,6 +15,7 @@
              <button type="button" class='loginButton' id='loginbtn' (click)="onClickLogin()">Log in</button>
   </div>
  <p>New user?<a routerLink="/signUp">Sign Up</a></p>
+ <a routerLink="/contactList">chat</a>
   </div>
   </form>
 </div>
