Integrated contact list with firebase

--- a/ZapChat/src/app/contact-list/contact-list.component.html
+++ b/ZapChat/src/app/contact-list/contact-list.component.html
@@ -1,11 +1,8 @@
 <div id="contactPanel">
   <ul class="contactList">
-      <li><div class="contact"><img src="assets/images/profile-icon.png" height="30px" width="30px">Sunil Yadav</div></li>
-      <li> jhkf</li>
-      <li> jhkf</li>
-      <li> jhkf</li>
-      <li> jhkf</li> 
-      <li> jhkf</li>
-
+      <li *ngFor="let contact of contactList">
+          <div class="contact"><img src="assets/images/profile-icon.png" height="30px" width="30px"> {{contact.name}}</div>
+       
+      </li>
   </ul>
 </div>
