--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -14,8 +14,10 @@
             <p><a id="forgot" href="">Forgot Password?</a></p><div class="login">
              <button type="button" class='loginButton' id='loginbtn' (click)="onClickLogin()">Log in</button>
   </div>
- <p>New user?<a routerLink="/signUp">Sign Up</a></p>
- <a routerLink="/contactList">chat</a>
+  <div>
+      <p>New user?<a routerLink="/signUp">Sign Up</a></p>
+      <p>Chat<a routerLink="/contactList">Sign Up</a></p>
+  </div>
   </div>
   </form>
 </div>
