--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="loginPanel">
+<div class="loginPanel" id="loginPanel">
   <form name="loginForm" class="content">
   <div class="header">
           <h1>Log in</h1>
@@ -15,6 +15,7 @@
              <button type="button" class='loginButton' id='loginbtn' (click)="onClickLogin()">Log in</button>
   </div>
  <p>New user?<a routerLink="/signUp">Sign Up</a></p>
+ <a routerLink="/chatPage">Chat Page</a>
   </div>
   </form>
 </div>
