--- a/ZapChat/src/app/sign-up/sign-up.component.html
+++ b/ZapChat/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div id="id01">
+<div id="id01" class="id01">
     <form class="modal-content" name="sign-up-form">
       <div class="container">
        <h1>Sign Up</h1>
