Add contacts Component created

--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -17,6 +17,7 @@
   <div>
       <p>New user?<a routerLink="/signUp">Sign Up</a></p>
       <p>Chat<a routerLink="/contactList">Sign Up</a></p>
+      <a routerLink="/addcontacts">Addcontacts</a>
   </div>
   </div>
   </form>
