--- a/ZapChat/src/app/chat-page/chat-page.component.html
+++ b/ZapChat/src/app/chat-page/chat-page.component.html
@@ -4,3 +4,11 @@
   <a class="active" href="#Contacts">Contacts</a>
   <a href="#Settings">Settings</a>
 </div>
+<div class="parentDiv">
+  <div class="contactListDiv">
+    <app-contact-list></app-contact-list>
+  </div>
+  <div class="chatWindowDiv">
+    <app-chat-window></app-chat-window>
+  </div>
+</div>
