--- a/ZapChat/src/app/chat-window/chat-window.component.html
+++ b/ZapChat/src/app/chat-window/chat-window.component.html
@@ -13,8 +13,7 @@
         </div>
     </div>
 </ng-container>
-</div> 
-<br/><br/>
 <div class="textBox">
-    <input type="text" name="message"  size="140">
+    <input type="text" name="message"  placeholder="Type your message..." size="140">
 </div>
+</div> 
