--- a/ZapChat/src/app/chat-window/chat-window.component.scss
+++ b/ZapChat/src/app/chat-window/chat-window.component.scss
@@ -14,6 +14,8 @@ $font_size_value: 17px;
 	margin: 0px auto;
 	padding: $padding_value_2;
 	overflow: auto;
+	width: 69%;
+	float: right;
 }
 .receivedDiv {
 	background-color: $background_color_2;
@@ -63,4 +65,5 @@ input[type=text]{
   	border: 1px solid #606060;
   	border-radius: 4px;
 	box-sizing: border-box;
+	margin-top: 20px;
 }
