--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -19,6 +19,7 @@
       <p><a routerLink="/contactList">Contact List</a></p>
       <p><a routerLink="/addcontacts">Addcontacts</a></p>
       <p><a routerLink="/chatPage">Chat Page</a></p>
+      <p><a routerLink="/chatWindow">ChatWindow</a></p>
   </div>
   </div>
   </form>
