--- a/ZapChat/src/app/sign-up/sign-up.component.html
+++ b/ZapChat/src/app/sign-up/sign-up.component.html
@@ -35,7 +35,7 @@
        <p>By creating an account you agree to our <a routerLink="/terms">Terms and Privacy Policy</a>.</p>
          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelButton">Cancel</button>
          &nbsp;&nbsp;
-         <button type="button" class="signUpButton" (click)="validation()">Sign Up</button>
+         <button type="button" class="signUpButton" (click)="onSignUp()">Sign Up</button>
      </div>
    </form>
  </div>
