--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -18,7 +18,7 @@
       <p>New user?<a routerLink="/signUp">Sign Up</a></p>
       <p><a routerLink="/contactList">Contact List</a></p>
       <p><a routerLink="/addcontacts">Addcontacts</a></p>
-      <p><a routerLink="/chatPage">Chat Page</a></p>
+      <p><a routerLink="/chatPage/:8578693255">Chat Page</a></p>
       <p><a routerLink="/chatWindow">ChatWindow</a></p>
   </div>
   </div>
