--- a/ZapChat/src/app/chat-window/chat-window.component.html
+++ b/ZapChat/src/app/chat-window/chat-window.component.html
@@ -1,12 +1,12 @@
 <div  class = "mainDiv">
 <ng-container *ngFor="let chat of chats">
-    <div *ngIf="chat.isType">
+    <div *ngIf="chat.type == 'sent'">
             <div class="clear"></div>
         <div class = "sentDiv">
         <span>{{chat.message}}</span><br/>
         </div>
     </div>
-    <div *ngIf="!chat.isType">
+    <div *ngIf="chat.type == 'received'">
         <div class="clear"></div>
         <div class = "receivedDiv" >
             <span>{{chat.message}}</span><br/>
