--- a/ZapChat/src/app/add-contacts/add-contacts.component.html
+++ b/ZapChat/src/app/add-contacts/add-contacts.component.html
@@ -1,12 +1,12 @@
 <div class="createContactPanel">
-  <form class="form" name="addcontact" >
+  <form class="form" name="addContact" >
       <div class="header">
           <h1>Add Contact!</h1>
-      </div>    
+      </div>
       <div class="inputs">
-              <input type="text" id="phonenumber" name='phoneNumber' placeholder="Phone Number.." required maxlength="12">
+              <input type="text" id="phoneNumber" name='phoneNumber' placeholder="Phone Number.." required maxlength="12">
+              <br>
               <input type="text" name='name' placeholder="Contact Name.." required>
-
       </div>
       <div class="addContact">
               <button type="button" class='addButton' id='addbtn' (click)="onClickAdd()">Add Contact!</button>
