--- a/ZapChat/src/app/add-contacts/add-contacts.component.scss
+++ b/ZapChat/src/app/add-contacts/add-contacts.component.scss
@@ -2,11 +2,20 @@ $color_1: black;
 $background_color_1: #ddd;
 $background_color_2: #4CAF50;
 $background_color_3: #fefefe;
-
+.createContactPanel{
+/*  background-image: url('/assets/images/chat-background.png');
+  background-repeat: no-repeat;
+  height: 525px;*/
+  // width: 30%;
+  margin-left: 0px;
+  margin-right: 5px;
+  float: left;
+  margin-top: 1px;
+}
 input[type=text] {
-	width: 250px;
-	padding: 15px;
-	margin: 5px 0 22px 0;
+	width: 150px;
+	padding: 5px;
+	margin: 1px 0 2px 0;
 	border: none;
 	background: #f1f1f1;
 }
@@ -23,7 +32,7 @@ button {
 	margin: 8px 0;
 	border: none;
 	cursor: pointer;
-	width: 250px;
+	width: 150px;
 	opacity: 0.9;
 	&:hover {
 		opacity: 1;
@@ -39,19 +48,23 @@ button {
 }
 .form {
 	background-color: $background_color_3;
-	margin: 3% auto 3% auto;
-	border: 1px solid #888;
-	width: 27%;
+  border: 1px solid #888;
+  margin-right: 1px;
+  margin-top: 1px;
+  padding: 36px;
+  padding-left: 46px;
+	//width: 27%;
 }
 * {
 	box-sizing: border-box;
 }
 .inputs {
-	padding-left: 45px;
+	padding-left: 35px;
 }
 .addContact {
-	padding: 45px;
+	padding: 35px;
 }
 .header {
-	padding-left: 75px;
+  padding-left: 30px;
+  padding-right: 5px;
 }
