--- a/ZapChat/src/app/chat-page/chat-page.component.scss
+++ b/ZapChat/src/app/chat-page/chat-page.component.scss
@@ -32,14 +32,43 @@ span{
 		text-align: center;
 		padding: 14px 16px;
 		text-decoration: none;
-		font-size: 17px;
+    font-size: 17px;
+    padding-bottom: 7px;
 		&:hover {
 			background-color: $background_color_2;
-			color: $color_2;
+      color: $color_2;
+      height: 100%;
 		}
 	}
 	a.active {
 		background-color: $background_color_3;
 		color: $color_2;
-	}
+  }
+  a.settings{
+    float: right;
+    height: 30px;
+    width: 30px;
+    padding-left: 10px;
+    padding-top: 5px;
+    &:hover{
+      background-color: $background_color_1;
+       transition-delay: 250ms;
+     -webkit-transform: rotateZ(55deg);
+       -moz-transform: rotateZ(55deg);
+       transform: rotateZ(55deg);
+   }
+  }
+  a.addContacts{
+    height: 30px;
+    width: 30px;
+    padding-left: 10px;
+    padding-top: 5px;
+     &:hover{
+      background-color: $background_color_1;
+       transition-delay: 250ms;
+     -webkit-transform: rotateZ(55deg);
+       -moz-transform: rotateZ(55deg);
+       transform: rotateZ(55deg);
+   }
+}
 }
