--- a/ZapChat/src/app/contact-list/contact-list.component.scss
+++ b/ZapChat/src/app/contact-list/contact-list.component.scss
@@ -1,5 +1,6 @@
 $background_color_1: #ddd;
 $background_color_2: beige;
+$background_color_3: #F0D8FA;
 $color_1: black;
 
 *::-webkit-scrollbar {
@@ -10,9 +11,10 @@ $color_1: black;
 	border-radius: 10px;
 }
 #contactPanel {
-	width: 30%;
-	height: 100%;
-	background-color: $background_color_1;
+  width: 25%;
+  margin-top: 1px;
+	height: 530px;
+	background-color: $background_color_3;
 	position: absolute;
 	overflow: scroll;
 	overflow-y: visible;
