Notification for unread messages and UI changes

--- a/ZapChat/src/app/add-contacts/add-contacts.component.html
+++ b/ZapChat/src/app/add-contacts/add-contacts.component.html
@@ -9,7 +9,7 @@
               <input type="text" name='name' placeholder="Contact Name.." required>
       </div>
       <div class="addContact">
-              <button type="button" class='addButton' id='addbtn' (click)="onClickAdd()">Add Contact!</button>
+              <button type="button" class='addButton' id='addBtn' (click)="onClickAdd()">Add Contact!</button>
    </div>
    </form>
   </div>
