--- a/ZapChat/src/app/contact-list/contact-list.component.scss
+++ b/ZapChat/src/app/contact-list/contact-list.component.scss
@@ -1,47 +1,119 @@
 $background_color_1: #ddd;
 $background_color_2: beige;
-$background_color_3: #F0D8FA;
+$background_color_3: #FFFFDD;
+$background_color_4: red;
 $color_1: black;
 
+
 *::-webkit-scrollbar {
-	width: 10px;
+  width: 10px;
 }
+
 *::-webkit-scrollbar-thumb {
-	background: rgb(100, 100, 100);
-	border-radius: 10px;
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
 }
+
 #contactPanel {
   width: 25%;
   margin-top: 1px;
-	height: 530px;
-	background-color: $background_color_3;
-	position: absolute;
-	overflow: scroll;
-	overflow-y: visible;
-	-webkit-overflow-scrolling: touch;
-	-ms-overflow-style: none;
+  height: 530px;
+  background-color: $background_color_3;
+  position: absolute;
+  overflow: scroll;
+  overflow-y: visible;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
 }
+
 ul {
-	margin: 0;
-	padding: 0;
-	li {
-		padding-bottom: 10px;
-		border: bottom color $color_1;;
-		border-bottom-width: 1px;
-		&:hover {
-			background-color: $background_color_2;
-			-webkit-animation-delay: 1s;
-		}
-	}
+  margin: 0;
+  padding: 0;
+
+  li {
+    padding-bottom: 10px;
+    border: bottom color $color_1;
+    ;
+    border-bottom-width: 1px;
+
+    &:hover {
+      background-color: $background_color_2;
+      -webkit-animation-delay: 1s;
+      animation-delay: 1s;
+
+    }
+  }
 }
+
 .contactList {
-	cursor: pointer;
-	position: relative;
-	padding: 8px 12px 40px;
-	list-style-type: none;
-	font-size: 18px;
-	transition: 0.2s;
+  cursor: pointer;
+  position: relative;
+  padding: 8px 12px 40px;
+  list-style-type: none;
+  font-size: 18px;
+  transition: 0.2s;
+  display: inline block;
 }
-.contact{
- padding: 5px;
+
+.contact {
+  padding: 5px;
+}
+
+.unreadMessage {
+  float: right;
+  align-content: center;
+  background-color: $background_color_4;
+  margin-top: 10px;
+  color: $background_color_1;
+  width: 20px;
+  height: 20px;
+  padding: 2px;
+  text-align: center;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+
+}
+
+.unreadMessageZero {
+  float: right;
+  align-content: center;
+  //background-color: red;
+  margin-top: 10px;
+  width: 20px;
+  height: 20px;
+  padding: 2px;
+  text-align: center;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+}
+
+.contactName {
+  margin-left: 35px;
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 20px;
+  width: 130px;
+  height: 20px;
+  //display: inline block;
+}
+
+.contactPhoneNumber {
+  margin-left: 35px;
+  padding-top: 0px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  padding-bottom: 0px;
+  width: 130px;
+  height: 20px;
+  //display: inline block;
+}
+
+.profileImage {
+  margin-top: 3px;
+  float: left;
+  width: 30px;
+  height: 30px;
 }
