Add contacts function added

--- a/ZapChat/src/app/add-contacts/add-contacts.component.html
+++ b/ZapChat/src/app/add-contacts/add-contacts.component.html
@@ -4,7 +4,7 @@
           <h1>Add Contact!</h1>
       </div>
       <div class="inputs">
-              <input type="text" id="phoneNumber" name='phoneNumber' placeholder="Phone Number.." required maxlength="12">
+              <input type="text" id="newContact" name='newContact' placeholder="Phone Number.." required maxlength="12">
               <br>
               <input type="text" name='name' placeholder="Contact Name.." required>
       </div>
