--- a/ZapChat/src/app/sign-up/sign-up.component.html
+++ b/ZapChat/src/app/sign-up/sign-up.component.html
@@ -34,7 +34,7 @@
         <span class="toolTipText">This field should match with the Password Field</span>
       </div>
       <p>By creating an account you agree to our <a routerLink="/terms">Terms and Privacy Policy</a>.</p>
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelButton">Cancel</button>
+      <button type="button"><a class="cancel" routerLink = "/">Cancel</a></button>
       &nbsp;&nbsp;
       <!--Sign Up button, which invokes the method onSignUp() in the TypeScript File-->
       <button type="button" class="signUpButton" (click)="onSignUp()">Sign Up</button>
