--- a/ZapChat/src/app/app.component.html
+++ b/ZapChat/src/app/app.component.html
@@ -1,5 +1,8 @@
 
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center"></div>
+<!--<h1>{{(message | async)?.notification.title}}</h1>
+<p>{{(message | async)?.notification.body}}</p>
+{{message | async | Json}} -->
 <router-outlet></router-outlet>
 
