--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -20,6 +20,7 @@
       <p><a routerLink="/addcontacts">Addcontacts</a></p>
       <p><a routerLink="/chatPage">Chat Page</a></p>
       <p><a routerLink="/chatWindow">ChatWindow</a></p>
+      <p><a routerLink="/notification">Notify me</a></p>
   </div>
   </div>
   </form>
