sending messages api merged

--- a/ZapChat/src/app/chat-window/chat-window.component.html
+++ b/ZapChat/src/app/chat-window/chat-window.component.html
@@ -14,6 +14,7 @@
     </div>
 </ng-container>
 <div class="textBox">
-    <input type="text" name="message"  placeholder="Type your message..." size="140">
+    <input type="text" name="message"  placeholder="Type your message..." size="80">
+    <button type="button" class="sendButton" (click)="sendMessage()">Send</button>
 </div>
 </div> 
