--- a/ZapChat/src/app/chat-window/chat-window.component.scss
+++ b/ZapChat/src/app/chat-window/chat-window.component.scss
@@ -60,12 +60,23 @@ $font_size_value: 17px;
 }
 
 .textBox{
-	position: fixed;;
+	position: fixed;
 	bottom: 15px;
 }
 
+
+.sendButton{
+	display: block;
+	float: right;
+	height: 45px;
+	margin: -1px -2px -2px;
+	width: 60px;
+	margin-top: 20px;
+	margin-left: 10px;
+}
+
 input[type=text]{
-	width: 95%;
+	width: 90%;
 	padding: 12px 20px;
   	margin: 8px 0;
   	display: inline-block;
