UI Theme update

--- a/ZapChat/src/app/chat-window/chat-window.component.scss
+++ b/ZapChat/src/app/chat-window/chat-window.component.scss
@@ -3,7 +3,7 @@ $color_2: #000;
 $background_color_1: #006699;
 $background_color_2: #efefef;
 $background_color_3: #D6FED5;
-$background_color_4: #FFF9AE;
+$background_color_4: #FFFFEE;
 $background_color_5: #606060;
 $font_family_1: sans-serif;
 $padding_value_1: 10px;
@@ -24,7 +24,7 @@ $font_size_value: 17px;
   overflow: auto;
   width: 74%;
   float: right;
-  background-image: url('/assets/images/tile.png');
+  background-image: url('/assets/images/tile2.png');
   background-repeat: no-repeat;
   background-size: 930px 430px;
 }
