--- a/ZapChat/src/app/add-contacts/add-contacts.component.html
+++ b/ZapChat/src/app/add-contacts/add-contacts.component.html
@@ -11,5 +11,6 @@
       <div class="addContact">
               <button type="button" class='addButton' id='addBtn' (click)="onClickAdd()">Add Contact!</button>
    </div>
+   <img class="addContactImage"src="assets/images/add-contact.png" height="200px" width="200px">
    </form>
   </div>
