--- a/ZapChat/src/app/chat-window/chat-window.component.scss
+++ b/ZapChat/src/app/chat-window/chat-window.component.scss
@@ -16,19 +16,31 @@ $font_size_value: 17px;
 
 
 .mainDiv {
-  height: 530px;
+  height: 420px;
   color: $color_1;
   margin-top: $margin_value_1;
   margin-bottom: $margin_value_1;
   padding: $padding_value_2;
-  overflow: auto;
+  //overflow: scroll;
+  //overflow:auto;
   width: 74%;
   float: right;
   background-image: url('/assets/images/tile2.png');
   background-repeat: no-repeat;
   background-size: 930px 430px;
 }
-
+.chatWindow{
+  overflow: auto;
+ height: 420px;
+ //position: absolute;
+ bottom: 20;
+}
+#wrapper{
+  position: relative;
+    height: 415px;
+    width: 920px;
+    overflow: hidden;
+}
 .receivedDiv {
   background-color: $color_1;
   color: $color_2;
@@ -41,6 +53,9 @@ $font_size_value: 17px;
   padding-right: $padding_value_1;
   padding-top: $padding_value_2;
   padding-bottom: $padding_value_2;
+  -moz-box-shadow: 3px 4px 3px #ccc;
+  -webkit-box-shadow: 3px 4px 3px #ccc;
+  box-shadow: 3px 4px 3px #ccc;;
 }
 
 .sentDiv {
@@ -52,9 +67,12 @@ $font_size_value: 17px;
   margin-bottom: $margin_value;
   border-radius: $padding_value_2;
   padding-left: $padding_value_1;
-  padding-right: $padding_value_1;
+  padding-right: $value_1;
   padding-top: $padding_value_2;
   padding-bottom: $padding_value_2;
+  -moz-box-shadow: 3px 4px 3px #ccc;
+  -webkit-box-shadow: 3px 4px 3px #ccc;
+  box-shadow: 3px 4px 3px #ccc;;
 }
 
 .clear {
@@ -69,6 +87,10 @@ $font_size_value: 17px;
 .textBox {
 	position: fixed;
   bottom: $value_1;
+  //margin: 20px;
+  z-index: 1;
+  opacity: 1;
+  overflow: hidden;
 }
 
 
@@ -84,7 +106,7 @@ $font_size_value: 17px;
 
 input[type=text] {
   //width: 99%;
-  padding: 12px 20px;
+  padding: 12px 10px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid $background_color_5;
