--- a/ZapChat/src/app/chat-window/chat-window.component.html
+++ b/ZapChat/src/app/chat-window/chat-window.component.html
@@ -15,7 +15,7 @@
     </div>
   </ng-container>
   <div class="textBox">
-    <input type="text" name="message"  placeholder="Type your message..." size="80">
+    <input type="text" name="message"  placeholder="Type your message..."  [(ngModel)]="txtMessage"  size="80">
     <button type="button" class="sendButton" (click)="sendMessage()">Send</button>
   </div>
 </div>
