--- a/ZapChat/src/app/login/login.component.html
+++ b/ZapChat/src/app/login/login.component.html
@@ -3,15 +3,18 @@
     <div class="header">
       <h1>Log in</h1>
       <!--Login Form-->
-      <input type="text" name='phoneNumber' placeholder="Phone Number" required maxlength="12">
+      <div class="inputGroup">      
+      <input type="text" name='phoneNumber' required maxlength="12" /><label>Phone Number</label>
       <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">&nbsp;
         <span class="toolTipText">Phone Number length should not be more than 10 numbers</span>
-      </div>
-      <br>
-      <input type="password" name='password' placeholder="Password.." required>
+      </div></div>
+      <div class="inputGroup">
+      <input   name='password' [type]="active ? 'text' : 'password'" /><label>Password</label>
+      <div  class="showPassword" [ngClass]= "active ? 'showPassword' : 'hidePassword'" (click)='passwordControl()'></div>
+      
       <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">&nbsp;
         <span class="toolTipText">Please enter Your Password</span>
-      </div>
+      </div></div>
       <p><a id="forgot" href="">Forgot Password?</a></p>
       <div class="login">
         <button type="button" class='loginButton' id='loginbtn' (click)="onClickLogin()">Log in</button>
@@ -24,7 +27,7 @@
         <p><a routerLink="/chatPage/:8578693255">Chat Page</a></p>
         <p><a routerLink="/chatWindow">ChatWindow</a></p>
       <p><a routerLink="/notification">Notify me</a></p>
-      </div>
+    </div>
     </div>
   </form>
 </div>
