--- a/ZapChat/src/app/login/login.component.scss
+++ b/ZapChat/src/app/login/login.component.scss
@@ -3,6 +3,7 @@ $color_2: #ffad33;
 $color_3: bisque;
 $color_4: #fff;
 $color_5: #888;
+$color-primary:#2196F3;
 $font_family_1: Arial,
 Helvetica,
 sans-serif;
@@ -23,39 +24,115 @@ $border_color_1: #f5f255;
   background-color: $background_color_5;
   margin: 3% auto 3% auto;
   border: 1px solid $color_5;
-  width: 27%;
+  width: 33%;
+  border: solid 1px #CCC;
+  -moz-box-shadow: 5px 5px 9px #999;
+  -webkit-box-shadow: 15px 5px 9px #999;
+    box-shadow: 5px 10px 9px #999;
+}
+*{
+  box-sizing: border-box;
 }
 
-* {
-  box-sizing: border-box;
+.inputGroup{
+  position:relative;
+  margin:40px auto;
 }
 
 input[type=text] {
   width: 250px;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 15px auto ;
   border: none;
-  background: $background_color_3;
+  width: 85%;
+  border-bottom:1px solid lighten(black, 85%);
+  background: transparent;
+  position: relative;
+  z-index: 1;
+  
+
+  & + label{
+    position:absolute;
+    top:10px;
+    left:3px;
+    font-size:16px;
+    color:lighten(black, 60%);
+    transition: all .2s ease-out;
+  }
+
 
   &:focus {
-    background-color: $background_color_1;
     outline: none;
+    border-width:2px;
+    border-color:$color-primary;
+    transition: all .2s ease-out;
+  }
+  &:focus + label,
+  &.has-value + label
+  {
+    top:-15px;
+    color:$color-primary;
+    font-size:12px;
+  }
+  &.has-value:not(:focus) + label{
+    color:lighten(black, 60%);
   }
 }
 
 input[type=password] {
   width: 250px;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  padding-right: 0px;
+  z-index: 1;
+  width: 85%;
+  margin: 10px auto ;
   border: none;
-  background: $background_color_3;
+  border-bottom:1px solid lighten(black, 85%);
+  background: transparent;
+  position: relative;
+&:hover{
+
+}
+  & + label{
+    position:absolute;
+    top:10px;
+    left:3px;
+    font-size:16px;
+    color:lighten(black, 60%);
+    transition: all .2s ease-out;
+  }
 
   &:focus {
-    background-color: $background_color_1;
     outline: none;
+    border-width:2px;
+    border-color:$color-primary;
+    transition: all .2s ease-out;
+  }
+  &:focus + label,
+  &.has-value + label
+  {
+    top:-15px;
+    color:$color-primary;
+    font-size:12px;
+  }
+  &.has-value:not(:focus) + label{
+    color:lighten(black, 60%);
   }
 }
-
+.showPassword{
+  display: inline-block;
+  background-image: url('src/assets/images/Eye.png');
+  width: 24px;
+  height: 24px;
+  padding-top: 10px;
+  cursor: pointer;
+}
+.hidePassword{
+  background-image: url('src/assets/images/Hide_100px.png');
+  width: 24px;
+  height: 24px;
+  padding-top: 10px;
+}
 .header {
   font-family: $font_family_1;
   //	font: 6em "Comic Sans MS";
@@ -107,6 +184,8 @@ button {
 .toolTip {
   position: relative;
   display: inline-block;
+  float: right;
+  margin-top: 18px;
 
   .toolTipText {
     visibility: hidden;
@@ -115,7 +194,8 @@ button {
     color: $color_4;
     text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 5px;
+    float: right;
     position: absolute;
     z-index: 1;
   }
