--- a/ZapChat/src/app/chat-window/chat-window.component.html
+++ b/ZapChat/src/app/chat-window/chat-window.component.html
@@ -21,6 +21,6 @@
   <div class="textBox">
     <input type="text" name="message"  placeholder="Type your message..."  [(ngModel)]="txtMessage"  size="80">
     <!--<button type="button" class="sendButton" (click)="sendMessage()"></button>-->
-    <a class="sendButton" (click)="sendMessage()"><img class="settingsImage" src="/assets/images/icon-send-2.png" width="35px" height="35px"></a>
+    <a class="sendButton" (click)="sendMessage()"><img class="sendIcon" src="/assets/images/icon-send-2.png"></a>
   </div>
 </div>
