--- a/ZapChat/src/app/chat-window/chat-window.component.scss
+++ b/ZapChat/src/app/chat-window/chat-window.component.scss
@@ -5,6 +5,7 @@ $background_color_2: #efefef;
 $background_color_3: #D6FED5;
 $background_color_4: #FFFFEE;
 $background_color_5: #606060;
+$background_color_6: #333;
 $font_family_1: sans-serif;
 $padding_value_1: 10px;
 $padding_value_2: 5px;
@@ -13,10 +14,18 @@ $margin_value_1: 1px;
 $margin_value_2: 3px;
 $value_1: 15px;
 $font_size_value: 17px;
+*::-webkit-scrollbar {
+  width: 10px;
+}
 
+*::-webkit-scrollbar-thumb {
+  background: rgb(240, 240, 240);
+  border-style: groove;
+  border-radius: 10px;
+}
 
 .mainDiv {
-  height: 420px;
+  height: 435px;
   color: $color_1;
   margin-top: $margin_value_1;
   margin-bottom: $margin_value_1;
@@ -27,17 +36,17 @@ $font_size_value: 17px;
   float: right;
   background-image: url('/assets/images/tile2.png');
   background-repeat: no-repeat;
-  background-size: 930px 430px;
+  background-size: 935px 440px;
 }
 .chatWindow{
   overflow: auto;
- height: 420px;
+ height: 430px;
  //position: absolute;
  bottom: 20;
 }
 #wrapper{
   position: relative;
-    height: 415px;
+    height: 425px;
     width: 920px;
     overflow: hidden;
 }
@@ -91,26 +100,36 @@ $font_size_value: 17px;
   z-index: 1;
   opacity: 1;
   overflow: hidden;
+  width: 71.8%;
+  padding: 5px;
+  padding-left: 15px;
+  background-color: $background_color_6;
 }
 
 
 .sendButton{
-	display: block;
+//	display:inline;
 	float: right;
-	height: 45px;
-	margin: -1px -2px -2px;
-	width: 60px;
-	margin-top: 20px;
-	margin-left: 10px;
+  height: 45px;
+	//width: 60px;
+	margin-top: 17px;
+  margin-left: 10px;
+  margin-right: 9px;
+  cursor: pointer;
+  margin-bottom: 0px;
+}
+.sendIcon{
+  width: 35px;
+  height: 35px;
 }
 
 input[type=text] {
-  //width: 99%;
+  width: 94%;
   padding: 12px 10px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid $background_color_5;
   border-radius: 4px;
   box-sizing: border-box;
-  margin-top: 20px;
+  margin-top: 10px;
 }
