--- a/ZapChat/src/app/login/login.component.scss
+++ b/ZapChat/src/app/login/login.component.scss
@@ -14,16 +14,48 @@ $background_color_6: black;
 $border_color_1: #f5f255;
 
 .loginPanel {
-  background-image: url('/assets/images/chat-background.png');
+  background-image: url('/assets/images/zapchat5.png');
   background-repeat: no-repeat;
-  height: 525px;
-}
+  height: 545px;
+  background-size: contain;
+  margin-top: -8px;
+  margin-bottom: -4px;
+  margin-right: -7px;
+  margin-left: -8px;
 
+
+
+
+}
+.blackOverlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100%;
+  background-color: #F7F7F7;
+  opacity: .17;
+  filter: Alpha(Opacity=30);
+  z-index: 11;
+  background: url("//img.carwale.com/cw-common/slide/overlay.png") repeat scroll 0 0 transparent;
+}
 .content {
-  background-color: $background_color_5;
+  background-color: $background_color_6;
   margin: 3% auto 3% auto;
-  border: 1px solid $color_5;
-  width: 27%;
+  border: 1px solid #888;
+   // background-color: #fff;
+    border: 1px solid rgba(100, 100, 100, .4);
+    -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+    -ms-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+    -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+    position: absolute;
+    box-sizing: border-box;
+    top: 53px;
+    left: 145px;
+    width: 372px;
+    z-index: 10;
+    z-index: 100002;
 }
 
 * {
@@ -59,7 +91,7 @@ input[type=password] {
 .header {
   font-family: $font_family_1;
   //	font: 6em "Comic Sans MS";
-  color: $color_1;
+  color: $color_4;
   padding-left: 1.5em;
 }
 
