--- a/ZapChat/src/app/login/login.component.scss
+++ b/ZapChat/src/app/login/login.component.scss
@@ -8,7 +8,7 @@ $font_family_1: Arial,
 Helvetica,
 sans-serif;
 $background_color_1: #ddd;
-$background_color_2: #4CAF50;
+$background_color_2: #4E91D0;
 $background_color_3: #f1f1f1;
 $background_color_5: #fefefe;
 $background_color_6: black;
@@ -43,13 +43,11 @@ $border_color_1: #f5f255;
 .content {
   background-color: $background_color_6;
   margin: 3% auto 3% auto;
-  border: 1px solid #888;
   width: 33%;
-  border: solid 1px #CCC;
-  -moz-box-shadow: 5px 5px 9px #999;
-  -webkit-box-shadow: 15px 5px 9px #999;
-    box-shadow: 5px 10px 9px #999;
-    box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+  border: none;
+    -moz-box-shadow: 5px 5px 25px #a6a6a6;
+  -webkit-box-shadow: 5px 5px 25px #a6a6a6;
+    box-shadow: 5px 5px 25px #a6a6a6;
     position: absolute;
     box-sizing: border-box;
     top: 53px;
@@ -57,6 +55,7 @@ $border_color_1: #f5f255;
     width: 372px;
     z-index: 10;
     z-index: 100002;
+
 }
 *{
   box-sizing: border-box;
@@ -64,12 +63,14 @@ $border_color_1: #f5f255;
 
 .inputGroup{
   position:relative;
-  margin:40px auto;
+  margin:10px auto;
 }
 
 input[type=text] {
-  width: 250px;
+  //width: 250px;
   padding: 15px;
+  padding-left: 0px;
+  padding-right: 5px;
   margin: 15px auto ;
   border: none;
   width: 85%;
@@ -77,12 +78,13 @@ input[type=text] {
   background: transparent;
   position: relative;
   z-index: 1;
-  
+  color:white;
+
 
   & + label{
     position:absolute;
     top:10px;
-    left:3px;
+    left:0px;
     font-size:16px;
     color:lighten(black, 60%);
     transition: all .2s ease-out;
@@ -108,16 +110,18 @@ input[type=text] {
 }
 
 input[type=password] {
-  width: 250px;
+  //width: 250px;
   padding: 15px;
-  padding-right: 0px;
-  z-index: 1;
-  width: 85%;
-  margin: 10px auto ;
+  padding-left: 0px;
+  padding-right: 5px;
+  margin: 15px auto ;
   border: none;
+  width: 85%;
   border-bottom:1px solid lighten(black, 85%);
   background: transparent;
   position: relative;
+  z-index: 1;
+  color:white;
 &:hover{
 
 }
@@ -152,14 +156,14 @@ input[type=password] {
   background-image: url('src/assets/images/Eye.png');
   width: 24px;
   height: 24px;
-  padding-top: 10px;
+ // padding-top: 10px;
   cursor: pointer;
 }
 .hidePassword{
   background-image: url('src/assets/images/Hide_100px.png');
   width: 24px;
   height: 24px;
-  padding-top: 10px;
+  //padding-top: 10px;
 }
 .header {
   font-family: $font_family_1;
@@ -186,29 +190,44 @@ input[type=password] {
 
 button {
   background-color: $background_color_2;
-  color: $color_1;
+  background-image: linear-gradient(#4E91D0,#b3ffff );
+  color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
   width: 250px;
   opacity: 0.9;
-
+  font-size: 28px;
   &:hover {
     opacity: 1;
   }
 }
 
 .loginButton {
-  width: 100%;
-  color: $color_1;
+  //width: 100%;
+  margin-left: 24px;
+  width: 296px;
+  color: black;
+  font-weight: bolder;
   background-color: $background_color_2;
 
   &:hover {
     cursor: pointer;
   }
 }
+p{
+  color: white;
+  margin-left: 25px;
+}
+.singUpLink{
+  color:#66b3ff;
+  margin-left: 15px;
 
+}
+a:visited{
+  color: #ffd633;
+}
 .toolTip {
   position: relative;
   display: inline-block;
