--- a/ZapChat/src/app/sign-up/sign-up.component.scss
+++ b/ZapChat/src/app/sign-up/sign-up.component.scss
@@ -2,6 +2,7 @@ $color_1: white;
 $color_2: #f1f1f1;
 $color_3: #f44336;
 $color_4: #fff;
+$color-primary:#2196F3;
 $font_family_1: Arial,
 Helvetica,
 sans-serif;
@@ -15,7 +16,12 @@ $background_color_6: black;
 * {
   box-sizing: border-box;
 }
-
+.inputGroup{
+  position:relative;
+  margin:40px auto;
+  display: inline-block;
+  margin-left: 10px;
+}
 .id01 {
   background-image: url('/assets/images/chat-background.png');
   background-repeat: no-repeat;
@@ -25,28 +31,54 @@ $background_color_6: black;
 input[type=text] {
   width: 250px;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 15px auto;
   display: inline-block;
   border: none;
-  background: $color_1;
-
+  z-index: 1;
+  border-bottom:1px solid lighten(black, 85%);
+  background: transparent;
+  position: relative;
+  & + label{
+    position:absolute;
+    top:10px;
+    left:3px;
+    font-size:16px;
+    color:lighten(black, 60%);
+    transition: all .2s ease-out;
+  }
   &:focus {
-    background-color: $background_color_1;
     outline: none;
+    border-width:2px;
+    border-color:$color-primary;
+    transition: all .2s ease-out;
+  }
+  &:focus + label,
+  &.has-value + label
+  {
+    top:-15px;
+    color:$color-primary;
+    font-size:12px;
   }
 }
 
 input[type=password] {
   width: 250px;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 15px auto;
   display: inline-block;
+  z-index: 1;
   border: none;
-  background: $color_1;
+  border-bottom:1px solid lighten(black, 85%);
+  background: transparent;
+  position: relative;
 
-  &:focus {
-    background-color: $background_color_1;
-    outline: none;
+  & + label{
+    position:absolute;
+    top:10px;
+    left:3px;
+    font-size:16px;
+    color:lighten(black, 60%);
+    transition: all .2s ease-out;
   }
 }
 
@@ -98,7 +130,10 @@ button {
   background-color: $background_color_5;
   margin: 3% auto 3% auto;
   border: 1px solid #888;
-  width: 47%;
+  width: 45%;
+  -moz-box-shadow: 5px 5px 9px #999;
+  -webkit-box-shadow: 15px 5px 9px #999;
+    box-shadow: 5px 10px 9px #999;
 }
 
 hr {
@@ -156,4 +191,7 @@ hr {
 }
 a:visited{
   text-decoration: none;
+}
+.rightStuff{
+  margin-left: 100px;
 }
