--- a/ZapChat/src/app/sign-up/sign-up.component.html
+++ b/ZapChat/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,5 @@
 <div id="id01" class="id01">
+    <div class="blackOverlay"></div>
   <form class="modal-content" name="sign-up-form">
     <div class="container">
       <h1>Sign Up</h1>
@@ -7,36 +8,36 @@
       <!--Form for Sign Up page-->
       <div class="inputGroup">
       <input type="text" name="firstName" required maxlength="30"><label>First Name</label></div>
-      <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">&nbsp;
+      <div class="toolTip"><img src="assets/images/i-button.png" height="12px" width="12px">&nbsp;
         <span class="toolTipText">First Name length should be between 3 and 30 characters</span>
   
       </div>
       <div class="inputGroup">
       <input type="text"  name="lastName" required maxlength="30" class="rightStuff"><label>Last Name</label></div>
-      <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">
+      <div class="toolTip"><img src="assets/images/i-button.png" height="12px" width="12px">
         <span class="toolTipText">Last Name length should be between 3 and 30 characters</span>
       </div>
       <br>
       <div class="inputGroup">
       <input type="text" name="phoneNumber" required maxlength="12" ><label>Phone Number</label></div>
-      <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">&nbsp;
+      <div class="toolTip"><img src="assets/images/i-button.png" height="12px" width="12px">&nbsp;
         <span class="toolTipText">Phone Number length should not be more than 10 numbers</span>
       </div>
       <div class="inputGroup">
       <input type="text" name="email" required maxlength="30" class="rightStuff"><label>Email</label></div>
-      <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">
+      <div class="toolTip"><img src="assets/images/i-button.png" height="12px" width="12px">
         <span class="toolTipText">Email length should not be more than 30 characters</span>
       </div>
       <br>
       <div class="inputGroup">
       <input type="password" name="password" required><label>Password</label></div>
-      <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">&nbsp;
+      <div class="toolTip"><img src="assets/images/i-button.png" height="12px" width="12px">&nbsp;
         <span class="toolTipText">The Password must contain at least 1 lowercase, 1 uppercase, 1 numeric and 1 special
           character and Password length should be at least 8 characters</span>
       </div>
       <div class="inputGroup">
       <input type="password" name="passwordRepeat" required class="rightStuff"><label>Repeat Password</label></div>
-      <div class="toolTip"><img src="assets/images/i-button.jpg" height="12px" width="12px">
+      <div class="toolTip"><img src="assets/images/i-button.png" height="12px" width="12px">
         <span class="toolTipText">This field should match with the Password Field</span>
       </div>
       <p>By creating an account you agree to our <a routerLink="/terms">Terms and Privacy Policy</a>.</p>
