--- a/ZapChat/src/app/sign-up/sign-up.component.scss
+++ b/ZapChat/src/app/sign-up/sign-up.component.scss
@@ -12,20 +12,45 @@ $background_color_3: #f44336;
 $background_color_4: #474e5d;
 $background_color_5: #fefefe;
 $background_color_6: black;
+h1 {
+  font-family: $font_family_1;
+  //	font: 6em "Comic Sans MS";
+  color: white;
+  padding-left: 1.5em;
+}
+p{
+  color: white;
+}
+
 
 * {
   box-sizing: border-box;
 }
 .inputGroup{
   position:relative;
-  margin:40px auto;
   display: inline-block;
   margin-left: 10px;
 }
+.blackOverlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100%;
+  background-color: #F7F7F7;
+  opacity: .17;
+  filter: Alpha(Opacity=30);
+  z-index: 11;
+  background: url("//img.carwale.com/cw-common/slide/overlay.png") repeat scroll 0 0 transparent;
+}
 .id01 {
-  background-image: url('/assets/images/chat-background.png');
+  background-image: url('/assets/images/zapchat5.png');
   background-repeat: no-repeat;
-  height: 525px;
+  height: 524px;
+  width: 1280px;
+  margin-bottom: -4px;
+  margin-right: -2px;
+  margin-left: -8px;
 }
 
 input[type=text] {
@@ -38,6 +63,7 @@ input[type=text] {
   border-bottom:1px solid lighten(black, 85%);
   background: transparent;
   position: relative;
+  color: white;
   & + label{
     position:absolute;
     top:10px;
@@ -66,12 +92,12 @@ input[type=password] {
   padding: 15px;
   margin: 15px auto;
   display: inline-block;
-  z-index: 1;
   border: none;
+  z-index: 1;
+  color: white;
   border-bottom:1px solid lighten(black, 85%);
   background: transparent;
   position: relative;
-
   & + label{
     position:absolute;
     top:10px;
@@ -80,8 +106,20 @@ input[type=password] {
     color:lighten(black, 60%);
     transition: all .2s ease-out;
   }
+  &:focus {
+    outline: none;
+    border-width:2px;
+    border-color:$color-primary;
+    transition: all .2s ease-out;
+  }
+  &:focus + label,
+  &.has-value + label
+  {
+    top:-15px;
+    color:$color-primary;
+    font-size:12px;
+  }
 }
-
 button {
   background-color: $background_color_2;
   color: $color_1;
@@ -127,13 +165,18 @@ button {
 }
 
 .modal-content {
-  background-color: $background_color_5;
+  background-color: $background_color_6;
   margin: 3% auto 3% auto;
-  border: 1px solid #888;
+  border: 1px solid rgb(248, 206, 206);
   width: 45%;
+  box-sizing: border-box;
+  position: absolute;
+  top: 53px;
+    left: 145px;
   -moz-box-shadow: 5px 5px 9px #999;
   -webkit-box-shadow: 15px 5px 9px #999;
     box-shadow: 5px 10px 9px #999;
+    z-index: 100002;
 }
 
 hr {
