--- a/ZapChat/src/app/chat-page/chat-page.component.html
+++ b/ZapChat/src/app/chat-page/chat-page.component.html
@@ -1,18 +1,18 @@
 <div class="navigationBar">
   <img src="/assets/images/Profile-Picture.png" height="35px" width="35px" class="Profile">
-  <a class="username">Username</a>
+  <a class="username">{{userName}}</a>
   <a class="contacts active" (click)="setContactList(true)"><img class="contactBookImage" src="/assets/images/contact-book.png"></a>
   <a class="addContacts" (click)="setAddContacts(true)"><img class="addContactImage" src="/assets/images/add-icon.png"></a>
   <a href="#Settings" class="settings"><img class="settingsImage" src="/assets/images/logout.png"></a>
-  <a> {{messageNumber}}</a>
+  <a> {{contactName}}</a>
 </div>
 <!--Adding the different components on the main chat page-->
 <div class="parentDiv">
   <div [hidden]=!isContactListVisible class="contactListDiv">
-    <app-contact-list (childEvent)="messageNumber=$event" [mobileNo]='mobileNo' ></app-contact-list>
+    <app-contact-list (childEvent)="messageNumber=$event" (contactName)="contactName=$event" [mobileNo]='mobileNo' ></app-contact-list>
   </div>
   <div [hidden]=isContactListVisible  class="addContactDiv">
-    <app-add-contacts ></app-add-contacts>
+    <app-add-contacts (hideAddContactEvent)="isContactListVisible=$event" [mobileNo]='mobileNo' ></app-add-contacts>
   </div>
   <div class="chatWindowDiv">
     <app-chat-window [messageNumber]='messageNumber' [mobileNo]='mobileNo'></app-chat-window>
