--- a/ZapChat/src/app/contact-list/contact-list.component.html
+++ b/ZapChat/src/app/contact-list/contact-list.component.html
@@ -1,7 +1,7 @@
 <div id="contactPanel">
   <ul class="contactList">
       <li *ngFor="let contact of contactList">
-          <div class="contact" (click)="showMessages(contact.phoneNumber)">
+          <div class="contact" (click)="showMessages(contact.phoneNumber,contact.name)">
              <span class="profileImage"><img src="assets/images/Profile-wolf.png" height="30px" width="30px"></span>
                 <span id="contactNames"class="contactName">{{contact.name}}</span>
                 <ng-container *ngIf="contact.unreadMessages > '0'; then thenTemplate; else elseTemplate"></ng-container>
