--- a/ZapChat/src/app/add-contacts/add-contacts.component.html
+++ b/ZapChat/src/app/add-contacts/add-contacts.component.html
@@ -11,6 +11,7 @@
       <div class="addContact">
               <button type="button" class='addButton' id='addBtn' (click)="onClickAdd()">Add Contact!</button>
    </div>
-   <img class="addContactImage"src="assets/images/add-contact.png" height="200px" width="200px">
+   <img class="addContactImage"src="assets/images/z.jpg
+   " height="200px" width="200px">
    </form>
   </div>
